Update HousingManager.java